[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Ruby bindings for mq Markdown processing"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query", "ruby"]
license = "MIT"
name = "mq-ruby"
publish = false
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.1.2"

[lib]
crate-type = ["cdylib"]
name = "mq_ruby"

[dependencies]
magnus = {version = "0.8"}
mq-lang = "0.5.10"
mq-markdown = "0.5.10"

